--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,4 @@
+application.args=User -t=Controller -id=userId -pup=[firstName,lastName], -prp=test
 compile.on.save=true
 do.depend=false
 do.jar=true
