--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,9 @@ dist.jar=${dist.dir}/TemplateGenerator.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.gson-2.3.1-javadoc.jar=gson-2.3.1-javadoc.jar
-file.reference.gson-2.3.1.jar=gson-2.3.1.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.gson-2.3.1.jar}:\
-    ${file.reference.gson-2.3.1-javadoc.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
